added sir and modelling for germany to app

--- a/dashboard/www/styles.scss
+++ b/dashboard/www/styles.scss
@@ -11,6 +11,26 @@ body {
  fill:#fff !important;
 }
 
+#legendContainermap_norway {
+ color: black;
+}
+
+#legendContainermap_germany {
+ color: black;
+}
+
 #legendContainermodel_map_norway {
+ color: black;
+}
+
+#legendContainermodel_map_germany {
+ color: black;
+}
+
+#legendContainersir_map_norway {
+ color: black;
+}
+
+#legendContainersir_map_germany {
  color: black;
 }
